cargo-features = ["per-package-target"]

[package]
name                    = "wasm-client"
version.workspace       = true
edition.workspace       = true
authors.workspace       = true
repository.workspace    = true
readme.workspace        = true
license.workspace       = true
description             = ""
default-target          = "riscv64gc-unknown-linux-gnu"

[dependencies]
static-dh-ecdh = "0.1.1"
rand           = "0.8.5"
sha2           = "0.10.2"
aes            = "0.8.1"
clap           = { version = "4.5.36", features = ["derive", "string"] }

[dependencies.schannel-lib]
path = "../schannel-lib"

